--- a/ML Pipeline Preparation.ipynb
+++ b/ML Pipeline Preparation.ipynb
@@ -679,7 +679,12 @@
       "/opt/conda/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
       "  'precision', 'predicted', average, warn_for)\n",
       "/opt/conda/lib/python3.6/site-packages/sklearn/metrics/classification.py:1137: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no true samples.\n",
-      "  'recall', 'true', average, warn_for)\n"
+      "  'recall', 'true', average, warn_for)\n",
+      "/opt/conda/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "/opt/conda/lib/python3.6/site-packages/sklearn/metrics/classification.py:1137: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no true samples.\n",
+      "  'recall', 'true', average, warn_for)\n",
+      "[Parallel(n_jobs=-1)]: Done   2 out of   2 | elapsed:  9.3min finished\n"
      ]
     }
    ],
