--- a/ML Pipeline Preparation-final.ipynb
+++ b/ML Pipeline Preparation-final.ipynb
@@ -861,8 +861,8 @@
    "outputs": [],
    "source": [
     "# Check the model performance on less vocabulary features\n",
-    "parameters_long = {\n",
-    "    'vect__max_features': [3000, 5000]\n",
+    "parameters = {\n",
+    "    'clf__estimator__n_estimators': [100, 200]\n",
     "}"
    ]
   },
@@ -936,7 +936,7 @@
     }
    ],
    "source": [
-    "cv = GridSearchCV(estimator=pipeline, param_grid=parameters_long, \n",
+    "cv = GridSearchCV(estimator=pipeline, param_grid=parameters, \n",
     "                  scoring='f1_weighted', cv=3, n_jobs=-1,verbose=10)\n",
     "\n",
     "cv.fit(X_train, Y_train)"
